# learn-rust

./: .gitignore  Cargo.toml  flake.nix  readme.md  result
adder/src/: lib.rs
adder/tests/: intergration_test.rs
advanced-features/src/: main.rs
borrowing/src/: main.rs
branches/src/: main.rs
cargo-features/: Cargo.toml
cargo-features/src/: lib.rs
collections/src/: main.rs
concurrency/src/: main.rs
enums/src/: main.rs
errors/: bye.txt  hello.txt
errors/src/: main.rs
functional/src/: main.rs
functions/src/: main.rs
generics/src/: main.rs
guessing-game/src/: main.rs
hello/: 404.html  hello.html
hello/src/: lib.rs  main.rs
loops/src/: main.rs
minigrep/src/: lib.rs  main.rs
ownership/src/: main.rs
pattern-matching/src/: main.rs
rectangles/src/: main.rs
slice/src/: main.rs
smart-pointer/: Cargo.toml
smart-pointer/src/: main.rs
structs/src/: main.rs
variables/src/: main.rs
