[workspace]

members = [
    "guessing-game",
    "variables",
    "functions",
    "branches",
    "loops",
    "ownership",
    "borrowing",
    "slice",
    "structs",
    "rectangles",
    "enums",
    "backyard",
    "restaurant",
    "collections",
    "errors",
    "generics",
    "adder",
    "minigrep",
    "functional",
    "cargo-features",
    "smart-pointer",
    "concurrency",
    "pattern-matching",
    "advanced-features"
]